--- a/frontend/public/MainWindow.html
+++ b/frontend/public/MainWindow.html
@@ -29,6 +29,9 @@
                 <p id="current-chat-desc">Добро пожаловать в Nexus Messenger</p>
             </div>
         </div>
+        <button class="input-btn" id="call-button" title="Аудио-звонок" style="margin-left:auto;">
+            <i class="fas fa-phone"></i>
+        </button>
     </div>
 
     <!-- Сообщения -->
@@ -47,30 +50,29 @@
             </div>
         </div>
         <div id="emoji-panel"></div>
-        <div id="recording-indicator"></div>
+        <div id="recording-indicator">🔴 Запись...</div>
     </div>
 
     <!-- Боковая панель -->
     <div class="diamond-sidebar">
         <div class="sidebar-content">
-            <!-- Чаты -->
+            <!-- Чат -->
             <div class="tab-content" id="chat-tab">
                 <div class="user-card">
-                    <div class="user-avatar">Я</div>
+                    <div class="user-avatar" id="me-avatar">Я</div>
                     <div class="user-name" id="user-name">Пользователь</div>
                     <div class="user-status">Online</div>
                 </div>
-                <div class="chat-list">
+                <div class="chat-list" id="chat-list">
                     <h3>Чаты</h3>
-                    <div class="chat-item active" data-chat="Общий чат">💬 Общий чат</div>
+                    <div class="chat-item active" data-room="room:public">💬 Общий чат</div>
                 </div>
             </div>
 
             <!-- Пользователи -->
             <div class="tab-content" id="users-tab" style="display:none;">
                 <h3>Все пользователи</h3>
-                <input type="text" id="search-user" placeholder="Поиск по @тегу"
-                       style="width:100%;padding:8px;margin-bottom:10px;border-radius:8px;">
+                <input type="text" id="search-user" placeholder="Поиск по @тегу" style="width:100%;padding:8px;margin-bottom:10px;border-radius:8px;">
                 <div class="user-list" id="user-list"></div>
             </div>
 
@@ -154,6 +156,28 @@
                 <button class="user-action-btn" id="save-profile">Сохранить изменения</button>
             </div>
         </div>
+    </div>
+
+    <!-- Входящий звонок -->
+    <div class="modal incoming-call" id="incoming-call-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Входящий звонок</h2>
+            </div>
+            <div class="modal-body">
+                <p id="incoming-call-from" style="margin-bottom:15px;">Звонит …</p>
+                <button class="user-action-btn" id="accept-call-btn">Принять</button>
+                <button class="user-action-btn" id="reject-call-btn" style="background:#e74c3c;margin-left:10px;">Отклонить</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Панель активного звонка -->
+    <div id="in-call-ui">
+        <span id="call-status">Звонок…</span>
+        <button class="user-action-btn" id="mute-btn">Mute</button>
+        <button class="user-action-btn" id="hangup-btn" style="background:#e74c3c;">Завершить</button>
+        <audio id="remote-audio" autoplay playsinline></audio>
     </div>
 </div>
 
