--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -17,23 +17,38 @@
 </div>
 
 <script>
+    const API_URL = "http://193.233.86.5:3000/api"; // 🔹 адрес сервера
+
     document.getElementById("login-btn").addEventListener("click", async () => {
       const username = document.getElementById("username").value.trim();
       const password = document.getElementById("password").value.trim();
 
-      const res = await fetch("/api/login", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ username, password })
-      });
-      const data = await res.json();
+      if (!username || !password) {
+        return alert("Введите логин и пароль");
+      }
 
-      if (res.ok) {
-        localStorage.setItem("username", data.username);
-        localStorage.setItem("nickname", data.nickname);
-        window.location.href = "MainWindow.html";
-      } else {
-        alert(data.error);
+      try {
+        const res = await fetch(`${API_URL}/login`, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ username, password })
+        });
+        const data = await res.json();
+
+        if (res.ok) {
+          // сохраняем данные пользователя
+          localStorage.setItem("username", data.username);
+          localStorage.setItem("nickname", data.nickname);
+          if (data.avatar) localStorage.setItem("avatar", data.avatar);
+
+          // переход в мессенджер
+          window.location.href = "MainWindow.html";
+        } else {
+          alert(data.error);
+        }
+      } catch (err) {
+        alert("Ошибка подключения к серверу");
+        console.error(err);
       }
     });
 </script>
