--- a/frontend/public/MainWindow.html
+++ b/frontend/public/MainWindow.html
@@ -124,40 +124,6 @@
         </div>
     </div>
 
-    <!-- Модалка смены пароля -->
-    <div class="modal" id="password-modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Смена пароля</h2>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal-body">
-                <input type="password" id="old-password" placeholder="Старый пароль" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="password" id="new-password" placeholder="Новый пароль (мин. 6)" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="password" id="confirm-password" placeholder="Подтверждение" style="width:100%;margin-bottom:10px;padding:8px;">
-                <button class="user-action-btn" id="save-password">Сохранить</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Модалка редактирования профиля -->
-    <div class="modal" id="profile-modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Редактировать профиль</h2>
-                <span class="close">&times;</span>
-            </div>
-            <div class="modal-body">
-                <input type="text" id="new-username" placeholder="Новое имя" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="text" id="new-nickname" placeholder="@новый ник" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="password" id="profile-old-password" placeholder="Старый пароль" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="password" id="profile-new-password" placeholder="Новый пароль (опционально)" style="width:100%;margin-bottom:10px;padding:8px;">
-                <input type="file" id="profile-avatar" accept="image/*" style="margin-bottom:10px;">
-                <button class="user-action-btn" id="save-profile">Сохранить изменения</button>
-            </div>
-        </div>
-    </div>
-
     <!-- Входящий звонок -->
     <div class="modal incoming-call" id="incoming-call-modal">
         <div class="modal-content">
@@ -177,10 +143,19 @@
         <span id="call-status">Звонок…</span>
         <button class="user-action-btn" id="mute-btn">Mute</button>
         <button class="user-action-btn" id="hangup-btn" style="background:#e74c3c;">Завершить</button>
+        <audio id="local-audio" autoplay playsinline muted></audio>
         <audio id="remote-audio" autoplay playsinline></audio>
     </div>
-</div>
 
+    <!-- 🔔 Уведомление о звонке -->
+    <div id="call-notification" class="call-notification">
+        <i class="fas fa-phone-volume"></i> <span id="call-notification-text">Входящий звонок…</span>
+    </div>
+
+    <!-- 🔔 Рингтон -->
+    <audio id="ringtone" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" loop></audio>
+
+</div>
 <script src="main.js"></script>
 </body>
 </html>
