--- a/Desktop-lamax/register.html
+++ b/Desktop-lamax/register.html
@@ -14,12 +14,12 @@
         <input type="password" id="new-password" placeholder="Пароль">
         <input type="password" id="confirm-password" placeholder="Подтверждение пароля">
         <button id="register-btn">Зарегистрироваться</button>
-        <p>Уже есть аккаунт? <a href="login.html">Войти</a></p>
+        <p>Уже есть аккаунт? <a href="Login.html">Войти</a></p>
     </div>
 </div>
 
 <script>
-    const API_URL = "http://193.233.86.5:3000/api"; // 🔹 сервер
+    const API_URL = "http://193.233.86.5:3000/api"; // сервер
 
     document.getElementById("register-btn").addEventListener("click", async () => {
         const username = document.getElementById("new-username").value.trim();
@@ -50,13 +50,19 @@
 
             if (res.ok) {
                 alert("Регистрация успешна! Теперь войдите.");
-                window.location.href = "login.html";
+
+                // Для Electron:
+                if (window.electronAPI) {
+                    window.electronAPI.redirectToLogin();
+                } else {
+                    window.location.href = "Login.html";
+                }
             } else {
-                alert(data.error);
+                alert(data.error || "Ошибка регистрации");
             }
         } catch (err) {
-            alert("Ошибка подключения к серверу");
             console.error(err);
+            alert("Ошибка подключения к серверу");
         }
     });
 </script>
