Налажена работа с сервером и сокетом

--- a/Desktop-lamax/login.html
+++ b/Desktop-lamax/login.html
@@ -17,39 +17,47 @@
 </div>
 
 <script>
-    const API_URL = "http://193.233.86.5:3000/api"; // 🔹 адрес сервера
+    const API_URL = "http://193.233.86.5:4000/api"; // твой сервер
 
     document.getElementById("login-btn").addEventListener("click", async () => {
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value.trim();
+        const username = document.getElementById("username").value.trim();
+        const password = document.getElementById("password").value.trim();
 
-      if (!username || !password) {
-        return alert("Введите логин и пароль");
-      }
-
-      try {
-        const res = await fetch(`${API_URL}/login`, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ username, password })
-        });
-        const data = await res.json();
-
-        if (res.ok) {
-          // сохраняем данные пользователя
-          localStorage.setItem("username", data.username);
-          localStorage.setItem("nickname", data.nickname);
-          if (data.avatar) localStorage.setItem("avatar", data.avatar);
-
-          // переход в мессенджер
-          window.location.href = "MainWindow.html";
-        } else {
-          alert(data.error);
+        if (!username || !password) {
+            alert("Введите логин и пароль");
+            return;
         }
-      } catch (err) {
-        alert("Ошибка подключения к серверу");
-        console.error(err);
-      }
+
+        try {
+            const res = await fetch(`${API_URL}/login`, {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ username, password })
+            });
+
+            const data = await res.json();
+
+            if (res.ok) {
+                // сохраняем данные в localStorage
+                localStorage.setItem("username", data.username);
+                localStorage.setItem("nickname", data.nickname);
+                if (data.avatar) {
+                    localStorage.setItem("avatar", data.avatar);
+                }
+
+                // переход в главное окно
+                if (window.electronAPI && window.electronAPI.redirectToMain) {
+                    window.electronAPI.redirectToMain();
+                } else {
+                    window.location.href = "mainwindow.html"; // fallback для браузера
+                }
+            } else {
+                alert(data.error || "Неверный логин или пароль");
+            }
+        } catch (err) {
+            console.error("Ошибка запроса:", err);
+            alert("Ошибка подключения к серверу");
+        }
     });
 </script>
 </body>
