--- a/Desktop-lamax/mainwindow.html
+++ b/Desktop-lamax/mainwindow.html
@@ -26,7 +26,7 @@
             <div class="channel-icon" id="chat-avatar"><i class="fas fa-hashtag"></i></div>
             <div>
                 <h2 id="current-chat-name">Общий чат</h2>
-                <p id="current-chat-desc">Добро пожаловать в Nexus Messenger</p>
+                <p id="current-chat-desc">Добро пожаловать в Lamax Messenger</p>
             </div>
         </div>
         <button class="input-btn" id="call-button" title="Звонок" style="margin-left:auto;">
@@ -174,7 +174,7 @@
 <script src="JSScripts/chat.js"></script>
 <script src="JSScripts/users.js"></script>
 <script src="JSScripts/call.js"></script>
-<script src="JSScripts/main.js"></script>
+<script src="JSScripts/app.js"></script>
 
 </body>
 </html>
